Second Commit TareaTextView

--- a/TareaTextView/app/src/main/res/values/strings.xml
+++ b/TareaTextView/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">21253 - TareaTextView</string>
+    <string name="txtViewLabel">Soy un programador que adora los retos y que no se rinde fácilmente. Mi objetivo principal es desarrollarme profesionalmente y mejorar mis habilidades, buscando las oportunidades que me permitan cumplir mis metas.</string>
 </resources>
